# german-td

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile
assets/enemies/: Knight.enemy  knight.enemy
assets/icons/: delete.kra
assets/icons/enemies/: Knight.kra
assets/icons/maps/: First.kra
assets/icons/projectiles/: Arrow.kra  FireBall.kra
assets/icons/towers/: ArcherTower.kra  Bow.kra  FireTower.kra
assets/maps/: First.map  first.map
assets/models/enemies/: Knight.blend  Knight.glb
assets/models/maps/: First.blend  First.glb
assets/models/projectiles/: Arrow.blend  Arrow.glb  FireBall.blend  FireBall.glb  FireBallImpact.glb
assets/models/towers/: ArcherTower.blend  ArcherTower.glb  ArcherTower2.glb  Bow.blend  Bow.glb  FireTower.blend  FireTower.glb
assets/projectiles/: Arrow.projectile  FireBall.projectile  arrow.projectile
assets/scripts/spawners/: KnightSpawner.roto  NewSpawner.roto
assets/shaders/: enemy.wgsl  focus.wgsl  tower_plot.wgsl  tower_ring.wgsl  tower_ring_action.wgsl
assets/textures/: FireBallImpactShell.kra  FireBallTrail.kra
assets/towers/: Archer Tower 2.tower  Archer Tower.tower  Bow Turret.tower  Fire Tower.tower  bow.tower
core/: Cargo.toml
core/src/: components.rs  enemy.rs  events.rs  lib.rs  maps.rs  physics_layers.rs  prelude.rs  projectile.rs  resources.rs  scripting.rs  skein_spawners.rs  tower.rs
core/src/assets/: asset_loader.rs  audio.rs  enemies.rs  generic_icons.rs  library.rs  loader.rs  maps.rs  mod.rs  projectile.rs  resource_loader.rs  roto_asset.rs  towers.rs
core/src/enemy/: controller.rs  mod.rs
core/src/tower/: mod.rs  placement.rs
core/src/utils/: animation_target.rs  audio.rs  billboard.rs  camera.rs  delayed_despawn.rs  gltf_instance_hooks.rs  inspect_none.rs  linear_interpolation.rs  mod.rs  ui_deselection.rs  value_animation.rs
editor/: Cargo.toml
editor/src/: camera.rs  cursor.rs  editor.rs  editor_ui.rs  focus.rs  gui.rs  main.rs  map.rs  prelude.rs  preview.rs  select_asset.rs  spawn_menu.rs  tower.rs
editor/src/edit_tabs/: enemy.rs  map.rs  mod.rs  projectile.rs  tower.rs
editor/src/focus/: deletion.rs  mod.rs  movement.rs  teleport.rs
editor/src/game_view/: actor_preview.rs  mod.rs
game/: Cargo.toml
game/src/: camera.rs  dev_tools.rs  enemy.rs  fire_ball.rs  game_over.rs  gold.rs  main.rs  prelude.rs  tower.rs  waves.rs
