[workspace]
members = ["core", "game", "editor"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["faervan <faervan@proton.me>", "KirmesBude <kirmesbude@gmail.com>"]

[workspace.dependencies]
german_td_core.path = "core"

# Bevy & plugins
bevy = { version = "0.18", default-features = false, features = [
  "3d",
  "serialize",
] }
avian3d = { version = "0.6.0-rc.1", default-features = false, features = [
  # Default
  "3d",
  "f32",
  "parry-f32",
  "collider-from-mesh",
  "bevy_scene",
  "bevy_picking",
  "debug-plugin",
  "parallel",
  # Non-default
  "serialize",
  "simd",
] }
bevy_skein.version = "0.5"

# Dev dependencies
bevy_egui.version = "0.39"
bevy-inspector-egui.version = "0.36"
egui = "0.33"
egui_dock = "0.18"

# Useful rust utilities
thiserror = "2"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
rand = "0.9"
roto = "0.10"
# Compile out low-severity logs to improve performance.
# Remove these features if you want to profile your game with tracy.
# (see <https://github.com/bevyengine/bevy/blob/main/docs/profiling.md#tracy-profiler>)
tracing = { version = "0.1", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
getrandom = { version = "0.3", default-features = false, features = [
  "wasm_js",
] }


[workspace.lints.rust]
# Mark `bevy_lint` as a valid `cfg`, as it is set when the Bevy linter runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[workspace.lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"


# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-units = 512

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

# Release optimization
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
