[package]
name = "german_td_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
# Default to a native dev build.
default = ["dev_native"]
dev = ["avian3d/diagnostic_ui"]
dev_native = ["dev", "dep:egui", "dep:bevy_egui", "dep:bevy-inspector-egui"]
editor = []

[dependencies]
bevy.workspace = true
avian3d.workspace = true

egui = { workspace = true, optional = true }
bevy_egui = { workspace = true, optional = true }
bevy-inspector-egui = { workspace = true, optional = true }

thiserror.workspace = true
ron.workspace = true
serde.workspace = true
roto.workspace = true

bevy_skein.workspace = true

[package.metadata.bevy_cli.release]
# Disable dev features for release builds.
default-features = false

[package.metadata.bevy_cli.web]
# Disable native features for web builds.
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

# You can configure the warning levels of Bevy lints here. For a list of all lints, see:
# <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/>
[package.metadata.bevy_lint]
# panicking_methods = "deny"
# pedantic = "warn"

[lints]
workspace = true
