[package]
name = "german_td_game"
default-run = "german_td_game"
version.workspace = true
edition.workspace = true
authors.workspace = true
metadata.workspace = true

[features]
default = ["dev_native"]
dev = [
  "german_td_core/dev",
  # Improve compile times for dev builds by linking Bevy as a dynamic library.
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/bevy_ui_debug",
  # Improve error messages coming from Bevy
  "bevy/track_location",
]
dev_native = [
  "german_td_core/dev_native",
  "dev",
  # Enable asset hot reloading for native dev builds.
  "bevy/file_watcher",
  # Enable embedded asset hot reloading for native dev builds.
  "bevy/embedded_watcher",
]

[dependencies]
german_td_core.workspace = true

bevy.workspace = true
avian3d.workspace = true
rand.workspace = true

bevy_skein.workspace = true

[package.metadata.bevy_cli.release]
# Disable dev features for release builds.
default-features = false

[package.metadata.bevy_cli.web]
# Disable native features for web builds.
default-features = false

# You can configure the warning levels of Bevy lints here. For a list of all lints, see:
# <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/>
[package.metadata.bevy_lint]
# panicking_methods = "deny"
# pedantic = "warn"

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[lints]
workspace = true
